configuração dos testes